# lazarus

./: .clauderules  .gitignore  CLAUDE.md  LICENSE  Makefile  NOTICE.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/commands/: implement-issue.md  review-pr.md
.claude/skills/implement/: SKILL.md
.claude/skills/write-issue/: SKILL.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml
apps/api/: config.py  config.yaml  main.py
apps/api/detectors/: __init__.py  annotate.py  anomaly_bbox.py  base.py  factory.py  patchcore.py  rtdetr.py  yolo.py
apps/api/models/: .gitkeep
apps/api/prompts/: diagnose.txt
apps/api/routers/: analyze.py  diagnose.py
apps/scraping/: __init__.py  github_scraper.py
apps/web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/__tests__/: DiagnosticPanel.test.tsx  useAnalyze.test.ts
apps/web/src/components/: BoundingBox.tsx  DiagnosticPanel.tsx  DropZone.tsx  ExportButton.tsx  PCBViewer.tsx
apps/web/src/config/: index.ts
apps/web/src/hooks/: useAnalyze.ts
apps/web/src/types/: index.ts
docs/: ANOMALY_BENCHMARK.md  BENCHMARK.md  CASE_STUDY.en.md  CASE_STUDY.md  MODEL_CARDS.md  WORKFLOW.md
docs/assets/: DEMO_RECORDING.md
ml/: download_dspcbsd.py  run_benchmark.py  run_training_benchmark.py  test.py  train.py  train_dspcbsd.py  train_patchcore.py  train_rtdetr.py
ml/benchmark/: __init__.py  latency.py  metrics.py  report.py
ml/datasets/dspcbsd/: dspcbsd.yaml
ml/figures/: make_figures.py
ml/runs/: anomaly_results.json  benchmark_results.json  training_manifest.json
tests/: test_anomaly_bbox.py  test_api.py  test_detectors.py
